frontend/test/should_fail/array_removeIf_index_match.grg
test array_map(ref a:array<int>) {
	if {
		a.removeIf{idx:match<array_map> -> value:int -> idx % 2 == 1}.empty();
	}	
}
